SubBt/force-app/main/default/objects/BT_Payment_Lines__c/fields/Cost_Code__c.field-meta.xml
<CustomField>
    <fullName>Cost_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost Code</label>
    <referenceTo>Cost_Codes__c</referenceTo>
    <relationshipLabel>Payment Lines</relationshipLabel>
    <relationshipName>Payment_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>