SubBt/force-app/main/default/objects/BT_Payment_Lines__c/fields/Invoice_Line_AP__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line_AP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Line (AP)</label>
    <referenceTo>Account_Payable_Item_Clone__c</referenceTo>
    <relationshipLabel>Payment Lines</relationshipLabel>
    <relationshipName>Payment_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>